[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/editor/blocks/icons/counter.png" type="Texture" id=1]
[ext_resource path="res://editor/blocks/components/DataComponent.gd" type="Script" id=2]
[ext_resource path="res://assets/editor/blocks/components/updown.png" type="Texture" id=3]
[ext_resource path="res://editor/blocks/components/InputVisual.gd" type="Script" id=4]
[ext_resource path="res://assets/editor/blocks/components/input_styles/NumInput.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/editor/blocks/component_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/editor/blocks/block_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/editor/blocks/components/switch_true.png" type="Texture" id=8]
[ext_resource path="res://assets/editor/blocks/components/switch_false.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 7 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 0
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 1 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 71, 32 )

[node name="InputComponent" type="MarginContainer"]
margin_right = 136.0
margin_bottom = 72.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visual" type="PanelContainer" parent="."]
margin_right = 136.0
margin_bottom = 72.0
rect_min_size = Vector2( 136, 72 )
size_flags_vertical = 4
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputContainer" type="HBoxContainer" parent="Visual"]
margin_left = 13.0
margin_right = 123.0
margin_bottom = 72.0
custom_constants/separation = 6
alignment = 1

[node name="TypeLabel" type="Label" parent="Visual/InputContainer"]
visible = false
margin_top = 15.0
margin_right = 110.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 0.372549 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1

[node name="Icon" type="TextureRect" parent="Visual/InputContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.372549 )
margin_left = 40.0
margin_right = 70.0
margin_bottom = 72.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="NumInput" type="SpinBox" parent="Visual/InputContainer"]
visible = false
margin_right = 136.0
margin_bottom = 72.0
rect_min_size = Vector2( 130, 72 )
size_flags_horizontal = 3
theme = SubResource( 2 )
custom_icons/updown = ExtResource( 3 )
max_value = 0.0
step = 0.0
allow_greater = true
allow_lesser = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StringInput" type="LineEdit" parent="Visual/InputContainer"]
visible = false
margin_left = 1.0
margin_right = 131.0
margin_bottom = 72.0
rect_min_size = Vector2( 130, 72 )
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_constants/minimum_spaces = 0
align = 1
expand_to_text_length = true
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoolInput" type="CheckButton" parent="Visual/InputContainer"]
visible = false
margin_right = 112.0
margin_bottom = 72.0
custom_icons/off = ExtResource( 9 )
custom_icons/on = ExtResource( 8 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_constants/check_vadjust = 0
custom_constants/hseparation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsertDetect" type="Area2D" parent="Visual"]
collision_mask = 0

[node name="Shape" type="CollisionShape2D" parent="Visual/InsertDetect"]
position = Vector2( 75, 36 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="Visual"]
